# ubs-mem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md  build.sh  ubs-mem.spec
src/: CMakeLists.txt
src/app_lib/: CMakeLists.txt  RmLibObmmExecutor.cpp  RmLibObmmExecutor.h  UbseMemExecutor.cpp  UbseMemExecutor.h  ipc_proxy.cpp  ipc_proxy.h  rack_mem_fd_map.cpp  rack_mem_fd_map.h  rack_mem_lib.cpp  rack_mem_lib.h  ubsm_check_resource.cpp  ubsm_check_resource.h
src/app_lib/common/: rack_mem_lib_common.h  rack_mem_libobmm.h
src/app_lib/include/: mx_shm.h  ubs_mem.h  ubs_mem_def.h
src/app_lib/mxm_lease_lib/: CMakeLists.txt  RackMem.cpp  RackMem.h  mxmem_lease.cpp
src/app_lib/mxm_lease_lib/borrow_app_meta_mgr/: BorrowAppMetaMgr.cpp  BorrowAppMetaMgr.h  CMakeLists.txt
src/app_lib/mxm_lease_lib/ipc_message_sender/: CMakeLists.txt  ipc_command.cpp  ipc_command.h
src/app_lib/mxm_shm_lib/: CMakeLists.txt  RackMemShm.cpp  RackMemShm.h  mxm_shm.cpp  mxmem_shmem.cpp
src/app_lib/mxm_shm_lib/ipc_message_sender/: CMakeLists.txt  shm_ipc_command.cpp  shm_ipc_command.h
src/app_lib/mxm_shm_lib/shm_meta_data_mgr/: ShmMetaDataMgr.cpp  ShmMetaDataMgr.h
src/common/: rack_mem_constants.h  rack_mem_err.h  rack_mem_functions.h  rack_mem_macros.h  rpc_config.h  ubs_common_config.h  ubs_common_types.h
src/common/hdagger/: dg_common.h
src/communication/: CMakeLists.txt
src/communication/adapter/: CMakeLists.txt  common_def.h  mxm_com_base.cpp  mxm_com_base.h  mxm_com_def.cpp  mxm_com_def.h  mxm_com_engine.cpp  mxm_com_engine.h  mxm_com_error.h  mxm_message_handler.h  ubsm_com_constants.h
src/dlock_utils/: CMakeLists.txt  client_desc.h  dlock_common.cpp  dlock_common.h  dlock_config.h  dlock_context.cpp  dlock_context.h  dlock_executor.cpp  dlock_executor.h  ubsm_lock.cpp  ubsm_lock.h  ubsm_lock_event.cpp  ubsm_lock_event.h
src/include/: mx_def.h
src/include/communication/: comm_def.h
src/include/service/: service.h  service_api.h  shm_service_api.h
src/include/ulog/: log.h  ulog.h  ulog4c.h
src/include/utils/: ubsm_file_util.h
src/mxm_lease/: CMakeLists.txt  ipc_handler.cpp  ipc_handler.h  ipc_server.cpp  ipc_server.h  ipc_server_engine.cpp  ipc_server_engine.h  mem_lease_service.cpp  mem_lease_service.h  mls_manager.cpp  mls_manager.h  mls_repository.cpp  mls_repository.h  service_api.cpp
src/mxm_message/: CMakeLists.txt  message_op.h  mxm_msg.cpp  mxm_msg.h  mxm_msg_base.h  mxm_msg_packer.h
src/mxm_shm/: CMakeLists.txt  ipc_handler.cpp  ipc_handler.h  ipc_server.cpp  ipc_server.h  ipc_server_engine.cpp  ipc_server_engine.h  mem_share_service.cpp  mem_share_service.h  region_manager.cpp  region_manager.h  region_repository.cpp  region_repository.h  rpc_handler.cpp  rpc_handler.h  rpc_server.cpp  rpc_server.h  rpc_server_engine.cpp  rpc_server_engine.h  service_api.cpp  shm_manager.cpp  shm_manager.h
src/process/: CMakeLists.txt
src/process/daemon/: CMakeLists.txt  main.cpp  ock_daemon.cpp  ock_daemon.h  ock_service.cpp  ock_service.h  ock_service_adapter.cpp  ock_service_adapter.h  ock_service_manager.cpp  ock_service_manager.h
src/process/monitor/: CMakeLists.txt  ubs_mem_leak_cleaner.cpp  ubs_mem_leak_cleaner.h  ubs_mem_monitor.cpp  ubs_mem_monitor.h
src/ptracer/: CMakeLists.txt  ptracer.cpp
src/ptracer/include/: ptracer.h  ubsm_ptracer.h
src/ptracer/tracers/: ptracer_default.cpp  ptracer_default.h  ptracer_tracepoint.h  ptracer_utils.h
src/security/: CMakeLists.txt
src/security/certify/: CMakeLists.txt  ubs_certify_handler.cpp  ubs_certify_handler.h
src/security/cryptor/: CMakeLists.txt  ubs_cryptor_def.h  ubs_cryptor_handler.cpp  ubs_cryptor_handler.h
src/store/: CMakeLists.txt  base_record_allocator.h  record_id_pool_allocator.cpp  record_id_pool_allocator.h  record_store.cpp  record_store.h  record_store_def.h
src/ulog/: CMakeLists.txt  ulog.cpp  ulog4c.cpp
src/under_api/: CMakeLists.txt
src/under_api/openssl/: CMakeLists.txt  openssl_dl.cpp  openssl_dl.h
src/under_api/sys/: CMakeLists.txt  system_adapter.cpp  system_adapter.h
src/under_api/ubse/: CMakeLists.txt  ubse_mem_adapter.cpp  ubse_mem_adapter.h
src/zen_discovery/: CMakeLists.txt  election_module.cpp  election_module.h  zen_discovery.cpp  zen_discovery.h
test/: cert.sh  (+3 more)
test/fuzz/: CMakeLists.txt  fuzz_main.cpp  secode_fuzz.sh
test/fuzz/shmem/: dt_fuzz.h  shmem_stubs.cpp  shmem_stubs.h  shmem_test.cpp
test/mxm-unit-tests/: CMakeLists.txt  new_gtest_main.cpp  test_env_init.h
test/mxm-unit-tests/app_testcase/: app_ipc_stub.cpp  app_ipc_stub.h  lease_test.cpp  rm_lib_obmm_executor_test.cpp
test/mxm-unit-tests/common/: rack_mem_functions_test.cpp  rpc_config_test.cpp  ubs_common_config_test.cpp  ubs_common_type_test.cpp
test/mxm-unit-tests/daemon/: daemon_common_test.cpp  daemon_init_test.cpp  daemon_test_common.h  ock_daemon_test.cpp
test/mxm-unit-tests/dlock_utils/: dlock_event_test.cpp  dlock_executor_test.cpp  dlock_executor_test.h  dlock_test.cpp  dlock_test.h
test/mxm-unit-tests/monitor/: ubs_mem_monitor_test.cpp
test/mxm-unit-tests/mxm_lease/: ipc_handler_test.cpp  mxm_lease_test.cpp  service_api_test.cpp  service_api_test.h
test/mxm-unit-tests/mxm_message/: mxm_message_test.cpp
test/mxm-unit-tests/mxm_shm/: shm_ipc_handler_test.cpp  shm_ipc_handler_test.h  shm_irpc_server_test.cpp  shm_irpc_server_test.h  shm_manager_test.cpp  shm_manager_test.h  shm_rpc_handler_test.cpp  shm_rpc_handler_test.h
test/mxm-unit-tests/security/: certify_test.cpp  cryptor_test.cpp
test/mxm-unit-tests/store/: record_store_test.cpp
test/mxm-unit-tests/ubse_sdk/: CMakeLists.txt  ubse_sdk.cpp
test/mxm-unit-tests/ulog/: ulog_test.cpp
test/mxm-unit-tests/under_api/: ubse_mem_adapter_dl_test.cpp  ubse_mem_adapter_stub.cpp  ubse_mem_adapter_stub.h
test/mxm-unit-tests/util/: util_file_test.cpp  util_function_test.cpp  util_systemd_test.cpp
test/mxm-unit-tests/zen_discovery/: election_module_test.cpp  zen_discovery_test.cpp
test/tools/benchmarks/: CMakeLists.txt  decrypt_example.cpp  ubsm_perf_test.cpp  ubsm_race_test.cpp
(+135 files in other folders)
